# ase-ss20-slacker-team

./: .gitignore  CHANGELOG.md  LICENSE  ase.cabal  hie.yaml  schema.psql  shell.nix
app/: Main.hs
src/: Api.hs  AseMain.hs  Horse.hs  Jockey.hs  MyLib.hs  Race.hs  Types.hs  Utils.hs
src/Ase/: Main.hs
src/Postgres/: Database.hs  Groundhog.hs  Polysemy.hs  Simple.hs
src/Servant/: Api.hs  Types.hs
test/: Main.hs  MyLibTest.hs
test/Postgres/: DatabaseSpec.hs
